#862kkbucj[DONE] MapStruct refactor and improvements