@@ -14,25 +14,26 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.springframework.data.domain.Page;
 
-import java.util.Collection;
-import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring", injectionStrategy = InjectionStrategy.CONSTRUCTOR, implementationName = MapperImplNaming.TRAIL_MAPPER)
-public abstract class TrailMapper extends AbstractMapper {
+@Mapper(
+        componentModel = AbstractMapper.COMPONENT_MODEL, injectionStrategy = InjectionStrategy.CONSTRUCTOR,
+        implementationName = MapperImplNaming.TRAIL_MAPPER,
+        imports = {Collectors.class}
+)
+public interface TrailMapper extends AbstractMapper {
 
     @Mapping(target = "operation", expression = "java(map(trail.getOperation()))")
     @Mapping(target = "state", expression = "java(map(trail.getState()))")
-    @Mapping(target = "date", expression = "java(trail.getDate())")
-    @Mapping(target = "affectedIds", expression = "java(map(trail.getAffectedIds()))")
-    abstract ExchangeRateTrailDto map(ExchangeRateTrail trail);
+    @Mapping(target = "affectedIds", expression = "java(trail.getAffectedIds().stream().toList())")
+    ExchangeRateTrailDto mapToResponse(final ExchangeRateTrail trail);
 
-    public List<String> map(final Collection<String> affectedIds) {
-        return affectedIds.stream().toList();
-    }
+    @Mapping(target = "content", expression = "java(trailsPage.getContent().stream().map(this::mapToResponse).collect(Collectors.toList()))")
+    @Mapping(target = "hasNext", expression = "java(trailsPage.hasNext())")
+    ExchangeRatesTrailsPage mapToPageResponse(final Page<ExchangeRateTrail> trailsPage);
 
-    public State map(final StateType state) {
+    default State map(final StateType state) {
         if (Objects.isNull(state)) {
             return null;
         }
@@ -42,7 +43,7 @@ public abstract class TrailMapper extends AbstractMapper {
         };
     }
 
-    public StateType map(final State state) {
+    default StateType map(final State state) {
         if (Objects.isNull(state)) {
             return null;
         }
@@ -52,7 +53,7 @@ public abstract class TrailMapper extends AbstractMapper {
         };
     }
 
-    public TrailOperation map(final OperationType operation) {
+    default TrailOperation map(final OperationType operation) {
         if (Objects.isNull(operation)) {
             return null;
         }
@@ -63,7 +64,7 @@ public abstract class TrailMapper extends AbstractMapper {
         };
     }
 
-    public OperationType map(final TrailOperation operation) {
+    default OperationType map(final TrailOperation operation) {
         if (Objects.isNull(operation)) {
             return null;
         }
@@ -72,25 +73,6 @@ public abstract class TrailMapper extends AbstractMapper {
             case EXCHANGE_RATES_HISTORY_UPDATE -> OperationType.EXCHANGE_RATES_HISTORY_UPDATE;
             case LATEST_EXCHANGE_RATES_SYNCHRONIZATION -> OperationType.LATEST_EXCHANGE_RATES_SYNCHRONIZATION;
         };
-    }
-
-    public ExchangeRatesTrailsPage map(final Page<ExchangeRateTrail> trails) {
-        var page = new ExchangeRatesTrailsPage();
-        page.setContent(map(trails.getContent()));
-        page.setTotalElements(trails.getTotalElements());
-        page.setNumberOfElements(trails.getNumberOfElements());
-        page.setFirst(trails.isFirst());
-        page.setLast(trails.isLast());
-        page.setTotalPages(trails.getTotalPages());
-        page.setHasNext(trails.hasNext());
-
-        return page;
-    }
-
-    public List<ExchangeRateTrailDto> map(List<ExchangeRateTrail> content) {
-        return content.stream()
-                .map(this::map)
-                .collect(Collectors.toList());
     }
 
 }
